--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,23 @@
 {
+  "extends": ["eslint:recommended", "airbnb", "prettier"],
+  "plugins": ["react-hooks"],
   "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
+    "browser": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
+  "parser": "babel-eslint",
   "rules": {
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"]
+    "no-plusplus": [0],
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx"] }
+    ],
+    "react/prop-types": [0],
+    "arrow-body-style": [0],
+    "react/jsx-props-no-spreading": [0],
+    "import/prefer-default-export": [0],
+    "react/no-array-index-key": [0],
+    "react/no-danger": [0],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
