--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
